For every 3 lines of good code that Kiro writes, it adds two bad lines